<resources>
    <string name="app_name" translatable="false">MetDidactico</string>
    <string name="mainStringTextViewCrea">Crea una Cuenta</string>
    <string name="maingStringHintNombre">Nombre</string>
    <string name="mainStringHintCorreo">correo</string>
    <string name="mainStringHintPassword">Contraseña</string>
    <string name="strBotonIngresar">Ingresar</string>
    <string name="strBotonCrear">Crear</string>
    <string name="nav_menu_inicio">Inicio</string>
    <string name="nav_menu_buscar">Buscar</string>
    <string name="nav_menu_carrito">Carrito</string>
    <string name="nav_menu_registro">Registrar</string>
</resources>
